src/components/styles/styles.css
.dashboard {
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

.bg-lightBlue {
    background-color: lightblue;
}

.bg-lightGray {
    background-color: lightgray;
}

.memory-border {
    border-style: solid;
    border-width: 1px;
    border-color: blue;
}

.memory {
    height:60px;
    max-height:60px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

.btnGroup, .btnToggle:hover>button {
    display: none;
}

.btnToggle:hover>.btnGroup {
    display: block;
    /* width: min-content; */
}

.btn-circle {
    width: 40px;
    height: 40px;
    border-radius: 20px;
    text-align: center;
    font-size: 15px;
}

.button {
    width: 66px;
}

#outputArea {
    height: 180px;
    background-color:#D0D0D0;
    overflow:auto;
}

#codingWrapper {
    display: inline-block;
    position: relative;
}

#lineButton {
    size: 10%;
    position: absolute;
    bottom: 10px;
    right: 20px;
}
.ioArea {
    height: 180px;
    background-color: #D0D0D0;
    overflow: auto;
}


@media (max-width: 600px) {
    .memory {
        height:40px;
        max-height:40px;
        display: flex;
        justify-content: center;
        align-items: center;
      }

      .btn-circle {
        width: 15px;
        height: 15px;
        border-radius: 8px;
        text-align: center;
        font-size: 5px;
    }
    
    #outputArea {
        height: 120px;
        background-color:#D0D0D0;
        overflow:auto;
    }
    
    #codingWrapper {
        display: inline-block;
        position: relative;
    }
    
    #lineButton {
        size: 5%;
        position: absolute;
        bottom: 3px;
        right: 8px;
    }
    .ioArea {
        height: 60px;
        background-color: #D0D0D0;
        overflow: auto;
    }

    #codingArea{
        height:400px;
        width:200px;
    }
}

